intercom-attributes/tests/data/ui/span-externtype-error.rs.stderr
error[E0277]: the trait bound `NotExternType: ExternType<AutomationTypeSystem>` is not satisfied
  --> span-externtype-error.rs:12:5
   |
12 |     fn arg_type(&self, bad_type: NotExternType);
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `ExternType<AutomationTypeSystem>` is not implemented for `NotExternType`
   |
   = help: the following other types implement trait `ExternType<TS>`:
             <&'a BStr as ExternType<AutomationTypeSystem>>
             <&'a BStr as ExternType<RawTypeSystem>>
             <&'a ComItf<I> as ExternType<TS>>
             <&'a core::ffi::c_str::CStr as ExternType<AutomationTypeSystem>>
             <&'a core::ffi::c_str::CStr as ExternType<RawTypeSystem>>
             <&'a str as ExternType<AutomationTypeSystem>>
             <&'a str as ExternType<RawTypeSystem>>
             <() as ExternType<TS>>
           and 35 others

error[E0277]: the trait bound `NotExternType: ExternType<AutomationTypeSystem>` is not satisfied
  --> span-externtype-error.rs:14:5
   |
14 |     fn ret_type(&self) -> ComResult<NotExternType>;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `ExternType<AutomationTypeSystem>` is not implemented for `NotExternType`
   |
   = help: the following other types implement trait `ExternType<TS>`:
             <&'a BStr as ExternType<AutomationTypeSystem>>
             <&'a BStr as ExternType<RawTypeSystem>>
             <&'a ComItf<I> as ExternType<TS>>
             <&'a core::ffi::c_str::CStr as ExternType<AutomationTypeSystem>>
             <&'a core::ffi::c_str::CStr as ExternType<RawTypeSystem>>
             <&'a str as ExternType<AutomationTypeSystem>>
             <&'a str as ExternType<RawTypeSystem>>
             <() as ExternType<TS>>
           and 35 others

error[E0277]: the trait bound `NotExternType: ExternType<AutomationTypeSystem>` is not satisfied
  --> span-externtype-error.rs:16:5
   |
16 |     fn all_type(&self, bad_type: NotExternType) -> ComResult<NotExternType>;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `ExternType<AutomationTypeSystem>` is not implemented for `NotExternType`
   |
   = help: the following other types implement trait `ExternType<TS>`:
             <&'a BStr as ExternType<AutomationTypeSystem>>
             <&'a BStr as ExternType<RawTypeSystem>>
             <&'a ComItf<I> as ExternType<TS>>
             <&'a core::ffi::c_str::CStr as ExternType<AutomationTypeSystem>>
             <&'a core::ffi::c_str::CStr as ExternType<RawTypeSystem>>
             <&'a str as ExternType<AutomationTypeSystem>>
             <&'a str as ExternType<RawTypeSystem>>
             <() as ExternType<TS>>
           and 35 others

error[E0277]: the trait bound `NotExternType: ExternType<RawTypeSystem>` is not satisfied
  --> span-externtype-error.rs:12:5
   |
12 |     fn arg_type(&self, bad_type: NotExternType);
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `ExternType<RawTypeSystem>` is not implemented for `NotExternType`
   |
   = help: the following other types implement trait `ExternType<TS>`:
             <&'a BStr as ExternType<AutomationTypeSystem>>
             <&'a BStr as ExternType<RawTypeSystem>>
             <&'a ComItf<I> as ExternType<TS>>
             <&'a core::ffi::c_str::CStr as ExternType<AutomationTypeSystem>>
             <&'a core::ffi::c_str::CStr as ExternType<RawTypeSystem>>
             <&'a str as ExternType<AutomationTypeSystem>>
             <&'a str as ExternType<RawTypeSystem>>
             <() as ExternType<TS>>
           and 35 others

error[E0277]: the trait bound `NotExternType: ExternType<RawTypeSystem>` is not satisfied
  --> span-externtype-error.rs:14:5
   |
14 |     fn ret_type(&self) -> ComResult<NotExternType>;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `ExternType<RawTypeSystem>` is not implemented for `NotExternType`
   |
   = help: the following other types implement trait `ExternType<TS>`:
             <&'a BStr as ExternType<AutomationTypeSystem>>
             <&'a BStr as ExternType<RawTypeSystem>>
             <&'a ComItf<I> as ExternType<TS>>
             <&'a core::ffi::c_str::CStr as ExternType<AutomationTypeSystem>>
             <&'a core::ffi::c_str::CStr as ExternType<RawTypeSystem>>
             <&'a str as ExternType<AutomationTypeSystem>>
             <&'a str as ExternType<RawTypeSystem>>
             <() as ExternType<TS>>
           and 35 others

error[E0277]: the trait bound `NotExternType: ExternType<RawTypeSystem>` is not satisfied
  --> span-externtype-error.rs:16:5
   |
16 |     fn all_type(&self, bad_type: NotExternType) -> ComResult<NotExternType>;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `ExternType<RawTypeSystem>` is not implemented for `NotExternType`
   |
   = help: the following other types implement trait `ExternType<TS>`:
             <&'a BStr as ExternType<AutomationTypeSystem>>
             <&'a BStr as ExternType<RawTypeSystem>>
             <&'a ComItf<I> as ExternType<TS>>
             <&'a core::ffi::c_str::CStr as ExternType<AutomationTypeSystem>>
             <&'a core::ffi::c_str::CStr as ExternType<RawTypeSystem>>
             <&'a str as ExternType<AutomationTypeSystem>>
             <&'a str as ExternType<RawTypeSystem>>
             <() as ExternType<TS>>
           and 35 others

error: aborting due to 6 previous errors

For more information about this error, try `rustc --explain E0277`.
